# GyroView

./: CMakeLists.txt
gui/: CameraDialog.ui  camera_dialog.py  gui3.py
src/: calibrate.cpp  detect_pose.cpp  detect_pose.hpp  main.cpp  make_markers.cpp
